--- a/src/components/lists/sortable-list/sortable-list.scss
+++ b/src/components/lists/sortable-list/sortable-list.scss
@@ -12,7 +12,7 @@
     padding: var(--sortable-list-padding-top) var(--sortable-list-padding-right)
       var(--sortable-list-padding-bottom) var(--sortable-list-padding-left);
     height: 100%;
-    overflow-y: auto;
+    overflow: hidden auto;
   }
 
   &--top-border {
